# grimnir

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .tool-versions  001_schema.sql  CLAUDE.md  CMakeLists (10).txt  CMakeLists (8).txt  CMakeLists (9).txt  Chart.yaml  Dockerfile  Dockerfile (1)  GRIMNIR.md  README.md  TODO.md  __init__ (3).py  __init__.py  compose.yaml  config.h  db.py  engine.py  history.py  index.html  labels.py  main (5).py  main.c  main.py  pyproject (2).toml  pyproject.toml  renovate.json5  values.yaml
.claude/hooks/: pre-commit-check.sh
.github/workflows/: chart-release.yml  ci.yml  firmware.yml  release.yml
aggregator/: Dockerfile
ansible/: deploy.yaml
backend/: Dockerfile  pyproject.toml
bifrost/: compose.yaml
bifrost/ansible/: deploy.yaml  install.yaml
bifrost/helm/grimnir/: .helmignore  Chart.yaml  README.md  values.schema.json  values.yaml
bifrost/helm/grimnir/files/: grimnir-dashboard.json
bifrost/helm/grimnir/templates/: _helpers.tpl  freki-deployment.yaml  freki-service.yaml  geri-deployment.yaml  geri-service.yaml  grafana-dashboard.yaml  ingress.yaml  ml-control-secret.yaml  model-upload-secret.yaml  nornir-deployment.yaml  nornir-service.yaml  secret.yaml  servicemonitor.yaml  volva-deployment.yaml  volva-service.yaml  vpa.yaml
docs/: api-reference.md  deployment.md  firmware-build-and-flash.md  monorepo.md  udp-wire-protocol.md
docs/style-guides/google/: CODE_OF_CONDUCT.md  jsguide.html  lispguide.xml  shell.xml  shell.xsl  shellguide.md  styleguide.xsl  tsguide.html  vimscriptfull.xml  vimscriptguide.xml
docs/style-guides/google/.github/: ISSUE_TEMPLATE.md
firmware/: config.h  config.local.h.example
firmware/huginn/: CMakeLists.txt  platformio.ini  sdkconfig.defaults
firmware/huginn/main/: CMakeLists.txt  main.c
firmware/muninn/: CMakeLists.txt  platformio.ini  sdkconfig.defaults
firmware/muninn/main/: CMakeLists.txt  main.c  syslog_client.c  syslog_client.h
freki/: Dockerfile  pyproject.toml
freki/src/freki/: db.py  main.py  metrics.py  ml_auth.py  orphan_reaper.py  training_samples_access.py
freki/src/freki/routers/: csi_stream.py  history.py  labels.py  models.py  predictions.py  rooms.py  stream.py  trained_models.py  training_daemons.py  training_data.py  training_jobs.py
freki/tests/: conftest.py  test_history.py  test_labels.py  test_ml_auth.py  test_predictions.py  test_training_daemons.py  test_training_data.py  test_training_jobs.py
frontend/: index.html
geri/: Dockerfile  pyproject.toml
geri/src/geri/: db.py  main.py  metrics.py  parser.py
geri/tests/: test_main.py  test_parser.py
hlidskjalf/: index.html  label-preview.html
mimir/: 001_schema.sql  002_training_samples.sql  004_rooms.sql  006_ml_pipeline.sql  008_current_predictions.sql  pyproject.toml
mimir/src/csi_models/: __init__.py  engine.py  features.py  migrate.py  models.py
mimir/src/csi_models/sql/: 001_schema.sql  003_csi_samples_chunk_interval.sql  005_drop_training_trigger.sql  007_training_job_claim_tokens.sql
nornir/: Dockerfile  pyproject.toml
nornir/src/nornir/: __init__.py  client.py  freki_client.py  hardware.py  main.py  metrics.py  train.py
volva/: Dockerfile  pyproject.toml
volva/src/volva/: __init__.py  client.py  main.py  metrics.py  model_loader.py  predict.py  state.py
