[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "freki"
version = "0.1.0"
description = "FastAPI backend — SSE streaming + REST API for CSI localization"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",
    "asyncpg==0.30.0",
    "pydantic==2.10.3",
    "structlog==24.4.0",
    "python-dotenv==1.0.1",
]

[project.scripts]
freki = "freki.main:run"

[tool.hatch.build.targets.wheel]
packages = ["src/freki"]
