[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "freki"
version = "0.1.0"
description = "FastAPI backend — SSE streaming + REST API for CSI localization"
requires-python = ">=3.12"
dependencies = [
    "csi-models",
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",
    "sqlalchemy==2.0.36",
    "asyncpg==0.30.0",
    "psycopg2-binary==2.9.10",
    "greenlet==3.1.1",
    "pydantic==2.10.3",
    "structlog==24.4.0",
    "prometheus-fastapi-instrumentator==7.1.0",
    "prometheus-client==0.21.0",
]

[project.scripts]
freki = "freki.main:run"

[tool.hatch.build.targets.wheel]
packages = ["src/freki"]
