[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "geri"
version = "0.1.0"
description = "UDP CSI packet receiver → PostgreSQL/TimescaleDB writer"
requires-python = ">=3.12"
dependencies = [
    "asyncpg==0.30.0",
    "structlog==24.4.0",
]

[project.scripts]
geri = "geri.main:run"

[tool.hatch.build.targets.wheel]
packages = ["src/geri"]
