[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "csi-models"
version = "0.1.0"
description = "Shared Grimnir database models and bootstrap migrations"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy==2.0.36",
    "asyncpg==0.30.0",
    "psycopg2-binary==2.9.10",
    "greenlet==3.1.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/csi_models"]
