[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "csi-models"
version = "0.1.0"
description = "Shared Grimnir database models and bootstrap migrations"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy==2.0.36",
    "asyncpg==0.30.0",
    "psycopg2-binary==2.9.10",
    "greenlet==3.1.1",
]

[project.optional-dependencies]
# Enables the ``csi_models.features`` module used by Nornir, Völva, and Freki
# (for validating training-job specs). Geri does not need these extras.
features = [
    "numpy==2.1.3",
    "pydantic==2.10.3",
]

[tool.hatch.build.targets.wheel]
packages = ["src/csi_models"]
